JDK-11 changes and start with 1.35